# qvet

./: .gitignore  Cargo.toml  LICENSE  README.md  qvet.yml
.github/workflows/: check.yml  release.yml
api/: Cargo.toml
api/src/: error.rs  handler.rs  lib.rs  oauth_handler.rs  state.rs
qvet-api/: Cargo.toml
qvet-api/scripts/: check
qvet-api/src/: error.rs  github.rs  lib.rs  oauth_handler.rs  redacted.rs  runtime.rs  state.rs
qvet-shuttle/: .gitignore  Cargo.toml
qvet-shuttle/src/: lib.rs
qvet-standalone/: .gitignore  Cargo.toml  Dockerfile  build.rs
qvet-standalone/scripts/: build-assets.sh  build-docker.sh  build.sh  check
qvet-standalone/src/: lib.rs  static_file_handler.rs
qvet-web/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
qvet-web/scripts/: check
qvet-web/src/: constants.ts  main.tsx  octokitHelpers.ts
qvet-web/src/components/: AccountMenu.tsx  AddDeploymentNoteDialog.tsx  AddEmbargoDialog.tsx  CheckRun.tsx  CommitRow.tsx  CommitSummary.tsx  CommitTable.tsx  Comparison.tsx  ConfigFile.tsx  ConfigStatus.tsx  DeploymentHeadline.tsx  DisplayState.tsx  FullPageLoading.tsx  Installations.tsx  LoginButton.tsx  LoginStatus.tsx  PageOptionsOverlay.tsx  RelativeTime.tsx  RepoSelect.tsx  RoutineChecks.tsx  ShaLink.tsx  Shell.tsx  TableHeader.tsx  Theme.tsx  ThemeModeToggle.tsx  TopBar.tsx  UnresolvedCheckRun.tsx  UserAvatar.tsx  UserLink.tsx  VersionUpdate.tsx
qvet-web/src/hooks/: useAccessToken.ts  useBaseSha.ts  useCheckRuns.ts  useCommitStatus.ts  useConfig.ts  useConfigFile.ts  useLogin.ts  useLoginRedirect.ts  useLogout.ts  useMasterSha.ts  useOctokit.ts  useOwnerRepo.ts  useProdTag.ts  useRoutineChecksComplete.ts  useSetCommitState.ts  useStore.ts  useTeamMembers.ts  useVersions.ts
qvet-web/src/queries/: index.ts
qvet-web/src/routes/: Home.tsx  Oauth2Callback.tsx
qvet-web/src/utils/: config.ts  helpers.ts  status.ts
scripts/: check  release-shuttle.sh
web/: package-lock.json  vite.config.ts
web/src/: index.css  octokitHelpers.ts
web/src/components/: CommitTable.tsx  FullPageLoading.tsx  ShaLink.tsx  UserLink.tsx
web/src/hooks/: useSetCommitState.ts
web/src/queries/: index.ts
web/src/routes/: index.ts
