[package]
name = "qvet_api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", default_features = false, features = ["sync", "signal", "macros", "rt-multi-thread"] }
serde = { version = "1", default_features = false, features = ["derive"] }
oauth2 = { version = "4", default_features = false, features = ["reqwest", "rustls-tls"] }
axum = { version = "0.6.0" }
thiserror = "1.0.37"
anyhow = "1.0.66"
hyper = "0.14.23"
log = "0.4.8"
serde_json = "1.0.91"
env_logger = "0.10.0"
clap = { version = "4.0.27", default_features = false, features = ["std", "derive"] }
dotenv = "0.15.0"
hex = "0.4.3"
