[package]
name = "qvet-api"
version = "0.1.2"
edition = "2021"

authors = ["Tom Milligan <code@tommilligan.net>"]
description = "Backend api implementation for qvet."
repository = "https://github.com/tommilligan/qvet"

license = "MIT"
keywords = ["qvet", "github", "app", "ci", "qa"]

[lib]

[dependencies]
tokio = { version = "1", default-features = false, features = ["sync", "signal", "macros", "rt-multi-thread"] }
serde = { version = "1", default-features = false, features = ["derive"] }
oauth2 = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
axum.workspace = true
thiserror = "1.0.37"
anyhow = "1.0.66"
hyper.workspace = true
serde_json = "1.0.91"
env_logger = "0.10.0"
clap = { version = "4.0.27", default-features = false, features = ["std", "derive"] }
hex = "0.4.3"
tower-http.workspace = true
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
axum-extra.workspace = true
dotenv.workspace = true

[dev-dependencies]
pretty_assertions = "1.3.0"
