[package]
name = "qvet-standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
qvet-api = { path = "../qvet-api" }
tokio = { version = "1", default_features = false, features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.66"
axum = { version = "0.6.0" }
include_dir = "0.7.3"
mime_guess = "2.0.4"
http = "0.2.8"
tracing = "0.1.37"
