[package]
name = "qvet-standalone"
version = "0.1.5"
edition = "2021"

authors = ["Tom Milligan <code@tommilligan.net>"]
description = "Single binary artefact for qvet."
repository = "https://github.com/tommilligan/qvet"

license = "MIT"
keywords = ["qvet", "github", "app", "ci", "qa"]

include = ["/src", "/include"]

[lib]
path = "src/lib.rs"

[dependencies]
qvet-api = { version = "0.1.2", path = "../qvet-api" }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.66"
axum.workspace = true
include_dir = "0.7.3"
mime_guess = "2.0.4"
tracing = "0.1.37"
axum-extra.workspace = true
dotenv.workspace = true

# settings for cargo-workspaces
[package.metadata.workspaces]
independent = true
